--- a/data/io.github.nokse22.inspector.desktop.in
+++ b/data/io.github.nokse22.inspector.desktop.in
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Name=command-test
-Exec=command-test
+Name=Inspector
+Exec=inspector
 Icon=io.github.nokse22.inspector
 Terminal=false
 Type=Application
-Categories=GTK;
+Categories=GTK;Utility;
 StartupNotify=true
