--- a/src/inspector.in
+++ b/src/inspector.in
@@ -1,6 +1,6 @@
 #!@PYTHON@
 
-# command-test.in
+# inspector.in
 #
 # Copyright 2023 Nokse
 #
@@ -31,15 +31,15 @@ localedir = '@localedir@'
 
 sys.path.insert(1, pkgdatadir)
 signal.signal(signal.SIGINT, signal.SIG_DFL)
-locale.bindtextdomain('command-test', localedir)
-locale.textdomain('command-test')
-gettext.install('command-test', localedir)
+locale.bindtextdomain('inspector', localedir)
+locale.textdomain('inspector')
+gettext.install('inspector', localedir)
 
 if __name__ == '__main__':
     import gi
 
     from gi.repository import Gio
-    resource = Gio.Resource.load(os.path.join(pkgdatadir, 'command-test.gresource'))
+    resource = Gio.Resource.load(os.path.join(pkgdatadir, 'inspector.gresource'))
     resource._register()
 
     from command_test import main
