updated to use libadwaita-1.4.alpha

--- a/meson.build
+++ b/meson.build
@@ -7,7 +7,7 @@ project('inspector',
 i18n = import('i18n')
 gnome = import('gnome')
 
-
+dependency('libadwaita-1', version: '>= 1.4.alpha')
 
 subdir('data')
 subdir('src')
