--- a/data/io.github.nokse22.inspector.appdata.xml.in
+++ b/data/io.github.nokse22.inspector.appdata.xml.in
@@ -3,6 +3,7 @@
 	<id>io.github.nokse22.inspector.desktop</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
+ 	<name>Inspector</name>
 	<description>
 	  <p>View information about your system</p>
 	</description>
