--- a/data/io.github.nokse22.inspector.appdata.xml.in
+++ b/data/io.github.nokse22.inspector.appdata.xml.in
@@ -11,7 +11,7 @@
 
 	<content_rating type="oars-1.0">
   </content_rating>
-
+  <developer_name>Nokse</developer_name>
   <launchable type="desktop-id">io.github.nokse22.inspector.desktop</launchable>
 
   <url type="homepage">https://github.com/Nokse22/inspector</url>
