--- a/data/io.github.nokse22.inspector.appdata.xml.in
+++ b/data/io.github.nokse22.inspector.appdata.xml.in
@@ -19,9 +19,14 @@ The app creates a GUI for commands like lsusb, lscpu, lspci, uname and more.</p>
   <url type="bugtracker">https://github.com/Nokse22/inspector/issues</url>
 
   <releases>
+  	<release version="0.1.5" date="2023-08-11">
+    		<description>
+			<p>Added motherboard/bios page</p>
+		</description>
+  	</release>
   	<release version="0.1.4" date="2023-08-07">
     		<description>
-			<p>Latest release</p>
+			<p>Bug fixes</p>
 		</description>
   	</release>
   </releases>
