--- a/data/io.github.nokse22.inspector.appdata.xml.in
+++ b/data/io.github.nokse22.inspector.appdata.xml.in
@@ -5,13 +5,22 @@
 	<project_license>GPL-3.0-or-later</project_license>
  	<name>Inspector</name>
 	<description>
-	  <p>View information about your system.
-The app creates a GUI for commands like lsusb, lscpu, lspci, uname and more.</p>
+    <p>View information about:
+	    <ul>
+			  <li>Usb devices</li>
+	      <li>Disk</li>
+	      <li>Memory</li>
+	      <li>PCI devices</li>
+	      <li>Network</li>
+	      <li>CPU</li>
+	      <li>Motherboard and bios</li>
+	      <li>System and distro</li>
+      </ul>
+	  </p>
 	</description>
 	<summary>View information about your system</summary>
 
-	<content_rating type="oars-1.0">
-  </content_rating>
+	<content_rating type="oars-1.0"></content_rating>
   <developer_name>Nokse</developer_name>
   <launchable type="desktop-id">io.github.nokse22.inspector.desktop</launchable>
 
@@ -19,15 +28,23 @@ The app creates a GUI for commands like lsusb, lscpu, lspci, uname and more.</p>
   <url type="bugtracker">https://github.com/Nokse22/inspector/issues</url>
 
   <releases>
+    <release version="0.1.6" date="2023-08-12">
+    	<description>
+    	  <ul>
+					<li>Fixed a critical bug if the app was run with older versions of lsblk</li>
+    	    <li>Made the app more stable</li>
+    	  </ul>
+	    </description>
+  	</release>
   	<release version="0.1.5" date="2023-08-11">
-    		<description>
-			<p>Added motherboard/bios page</p>
-		</description>
+    	<description>
+			  <p>Added motherboard/bios page</p>
+		  </description>
   	</release>
   	<release version="0.1.4" date="2023-08-07">
-    		<description>
-			<p>Bug fixes</p>
-		</description>
+    	<description>
+			  <p>Bug fixes</p>
+		  </description>
   	</release>
   </releases>
 
