--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -1,8 +1,8 @@
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
     types: [ "review_requested", "ready_for_review" ]
 name: Spell Check
 jobs:
