--- a/data/io.github.nokse22.inspector.desktop.in
+++ b/data/io.github.nokse22.inspector.desktop.in
@@ -1,9 +1,10 @@
 [Desktop Entry]
 Name=Inspector
+Comment=View information about your system
 Exec=inspector
 Icon=io.github.nokse22.inspector
 Terminal=false
 Type=Application
 Categories=GTK;Utility;
-Keywords=Trivia;Quiz;Game;Entertainment;
+Keywords=System;Information;Disk;Memory;Devices;Network;CPU;Motherboard;BIOS;bios;
 StartupNotify=true
