--- a/data/io.github.nokse22.inspector.appdata.xml.in
+++ b/data/io.github.nokse22.inspector.appdata.xml.in
@@ -19,10 +19,14 @@
   <url type="bugtracker">https://github.com/Nokse22/inspector/issues</url>
 
   <releases>
-    <release version="0.1.7" date="2023-08-22">
+    <release version="0.1.7" date="2023-09-15">
     	<description>
-			  <p>Fixed typo</p>
+			  <p>Fixed typo (kawaii-ghost)</p>
     	  <p>Improved metadata</p>
+    	  <p>Made labels selectable</p>
+    	  <p>Added translation support (Sabri Ünal)</p>
+    	  <p>Added Turkish translation (Sabri Ünal)</p>
+    	  <p>Improved storage device view (soumyaDghosh)</p>
 		  </description>
   	</release>
     <release version="0.1.6" date="2023-08-12">
