--- a/data/io.github.nokse22.inspector.appdata.xml.in
+++ b/data/io.github.nokse22.inspector.appdata.xml.in
@@ -17,12 +17,14 @@
 
   <url type="homepage">https://github.com/Nokse22/inspector</url>
   <url type="bugtracker">https://github.com/Nokse22/inspector/issues</url>
+  <url type="donation">https://ko-fi.com/nokse22</url>
 
   <releases>
-    <release version="0.1.8" date="2023-08-11">
+    <release version="0.1.8" date="2023-09-26">
     	<description>
 			  <li>Improved app design and usability</li>
     	  <li>Updated runtime to 45</li>
+    	  <li>Added French translation</li>
 		  </description>
   	</release>
     <release version="0.1.7" date="2023-09-15">
