--- a/data/io.github.nokse22.inspector.appdata.xml.in
+++ b/data/io.github.nokse22.inspector.appdata.xml.in
@@ -22,37 +22,37 @@
   <releases>
     <release version="0.1.8" date="2023-09-26">
     	<description>
-			  <li>Improved app design and usability</li>
-    	  <li>Updated runtime to 45</li>
-    	  <li>Added French translation</li>
+			  <p>Improved app design and usability</p>
+    	  <p>Updated runtime to 45</p>
+    	  <p>Added French translation</p>
 		  </description>
   	</release>
     <release version="0.1.7" date="2023-09-15">
     	<description>
-			  <li>Fixed typo (kawaii-ghost)</li>
-    	  <li>Improved metadata</li>
-    	  <li>Made labels selectable</li>
-    	  <li>Added translation support (Sabri Ünal)</li>
-    	  <li>Added Turkish translation (Sabri Ünal)</li>
-    	  <li>Improved storage device view (soumyaDghosh)</li>
+			  <p>Fixed typo (kawaii-ghost)</p>
+    	  <p>Improved metadata</p>
+    	  <p>Made labels selectable</p>
+    	  <p>Added translation support (Sabri Ünal)</p>
+    	  <p>Added Turkish translation (Sabri Ünal)</p>
+    	  <p>Improved storage device view (soumyaDghosh)</p>
 		  </description>
   	</release>
     <release version="0.1.6" date="2023-08-12">
     	<description>
     	  <ul>
-					<li>Fixed a critical bug if the app was run with older versions of lsblk</li>
-    	    <li>Made the app more stable</li>
+					<p>Fixed a critical bug if the app was run with older versions of lsblk</p>
+    	    <p>Made the app more stable</p>
     	  </ul>
 	    </description>
   	</release>
   	<release version="0.1.5" date="2023-08-11">
     	<description>
-			  <li>Added motherboard/bios page</li>
+			  <p>Added motherboard/bios page</p>
 		  </description>
   	</release>
   	<release version="0.1.4" date="2023-08-07">
     	<description>
-			  <li>Bug fixes</li>
+			  <p>Bug fixes</p>
 		  </description>
   	</release>
   </releases>
