--- a/data/io.github.nokse22.inspector.appdata.xml.in
+++ b/data/io.github.nokse22.inspector.appdata.xml.in
@@ -12,7 +12,7 @@
 	</description>
 
   <content_rating type="oars-1.1" />
-  <developer_name translatable="no">Nokse</developer_name>
+  <developer_name translate="no">Nokse</developer_name>
   <launchable type="desktop-id">io.github.nokse22.inspector.desktop</launchable>
   <translation type="gettext">inspector</translation>
 
@@ -24,14 +24,14 @@
 
   <releases>
     <release version="0.1.8" date="2023-09-26">
-    	<description translatable="no">
+    	<description translate="no">
 			  <p>Improved app design and usability</p>
     	  <p>Updated runtime to 45</p>
     	  <p>Added French translation</p>
 		  </description>
   	</release>
     <release version="0.1.7" date="2023-09-15">
-    	<description translatable="no">
+    	<description translate="no">
 			  <p>Fixed typo (kawaii-ghost)</p>
     	  <p>Improved metadata</p>
     	  <p>Made labels selectable</p>
@@ -41,18 +41,18 @@
 		  </description>
   	</release>
     <release version="0.1.6" date="2023-08-12">
-    	<description translatable="no">
+    	<description translate="no">
 				<p>Fixed a critical bug if the app was run with older versions of lsblk</p>
     	  <p>Made the app more stable</p>
 	    </description>
   	</release>
   	<release version="0.1.5" date="2023-08-11">
-    	<description translatable="no">
+    	<description translate="no">
 			  <p>Added motherboard/bios page</p>
 		  </description>
   	</release>
   	<release version="0.1.4" date="2023-08-07">
-    	<description translatable="no">
+    	<description translate="no">
 			  <p>Bug fixes</p>
 		  </description>
   	</release>
