appdata: Add developer ID
Flathub require a developer tag and developer ID.

> A developer tag with a name child tag must be present. Only one developer tag is allowed and the name tag also must be present only once in untranslated form.

```
<developer id="tld.vendor">
  <name>Developer name</name>
</developer>
```
Source: https://docs.flathub.org/docs/for-app-authors/metainfo-guidelines/#name-summary-and-developer-name

--- a/data/io.github.nokse22.inspector.appdata.xml.in
+++ b/data/io.github.nokse22.inspector.appdata.xml.in
@@ -13,6 +13,9 @@
 
   <content_rating type="oars-1.1" />
   <developer_name translate="no">Nokse</developer_name>
+  <developer id="io.github.nokse22">
+	  <name translate="no">Nokse</name>
+  </developer>
   <launchable type="desktop-id">io.github.nokse22.inspector.desktop</launchable>
   <translation type="gettext">inspector</translation>
 
