--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -24,9 +24,21 @@ jobs:
         arch: [x86_64]
       fail-fast: false
     steps:
-      - uses: actions/checkout@v3
+     - uses: actions/checkout@v4
+    # Docker is required by the docker/setup-qemu-action which enables emulation
+    - name: Install deps
+      if: ${{ matrix.arch != 'x86_64' }}
+      run: |
+        dnf -y install docker
+    - name: Set up QEMU
+      if: ${{ matrix.arch != 'x86_64' }}
+      id: qemu
+      uses: docker/setup-qemu-action@v2
+      with:
+        platforms: arm64
       - uses: flatpak/flatpak-github-actions/flatpak-builder@v4
         with:
           bundle: io.github.nokse22.inspector.flatpak
           manifest-path: io.github.nokse22.inspector.json
           cache-key: flatpak-builder-${{ github.sha }}
+          arch: ${{ matrix.arch }}
