--- a/.github/workflows/flatpak.yml
+++ b/.github/workflows/flatpak.yml
@@ -1,43 +1,34 @@
+name: Flatpak
+
 on:
   push:
-    branches: [ "master" ]
+    branches: [master]
     paths-ignore:
       - '**/README.md'
   pull_request:
     branches: [ "master" ]
     types: [ "review_requested", "ready_for_review" ]
-  workflow_dispatch:
-name: Flatpak
-permissions:
-  id-token: write
-  contents: read
+
 jobs:
   flatpak:
     name: "Flatpak"
-    runs-on: ubuntu-latest
     container:
-      image: bilelmoussaoui/flatpak-github-actions:gnome-44
+      image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-48
       options: --privileged
     strategy:
       matrix:
-        arch: [x86_64]
-      fail-fast: false
+        variant:
+          - arch: x86_64
+            runner: ubuntu-24.04
+          - arch: aarch64
+            runner: ubuntu-24.04-arm
+    runs-on: ${{ matrix.variant.runner }}
     steps:
-     - uses: actions/checkout@v4
-    # Docker is required by the docker/setup-qemu-action which enables emulation
-    - name: Install deps
-      if: ${{ matrix.arch != 'x86_64' }}
-      run: |
-        dnf -y install docker
-    - name: Set up QEMU
-      if: ${{ matrix.arch != 'x86_64' }}
-      id: qemu
-      uses: docker/setup-qemu-action@v2
-      with:
-        platforms: arm64
+      - uses: actions/checkout@v4
       - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: io.github.nokse22.inspector.flatpak
           manifest-path: io.github.nokse22.inspector.json
           cache-key: flatpak-builder-${{ github.sha }}
-          arch: ${{ matrix.arch }}
+          arch: ${{ matrix.variant.arch }}
+          verbose: true
